Fix year truncation in CV: cancel Bootstrap row negative margins
Bootstrap .row has margin: 0 -15px which pushes date content outside the
list-group-item boundary, clipping the first characters (showing '26'
instead of '2026'). Fix in both print CSS and web SCSS.
Also add white-space: nowrap to .cv-date on screen.

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -29,6 +29,18 @@ html[data-theme="dark"] .cv .card {
   font-weight: 600;
   color: var(--global-theme-color);
   padding-top: 0.15rem;
+  white-space: nowrap;
+}
+
+// Cancel Bootstrap .row negative gutters inside cv entries so dates aren't clipped
+.cv .list-group-item .row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.cv .list-group-item .col-md-2,
+.cv .list-group-item .col-md-10 {
+  padding-left: 0;
 }
 
 // Entry title
